static/css/style.css
/* ... */
@media (max-width: 480px) {
    section{
        height: 73vh;
    }
    section .container{
        padding: 25px 0px;
    }
    section .container .about p {
        font-size: 15px;
        margin: 15px 0px 5px;
    }
    section .container .section{
        width: 32%;
        margin-top: 20px;
    }
    section .container .section::before {
        top: -3px;
    }
    section .container .section img{
        width: 95%;
        margin: 0;
    }
    section .container .extra div span ,section .container .extra div a {
        font-size: 13px;
    }
}
/* End */

/* Aside */
aside
{
    background: #000000;
    padding-bottom: 50px;
}

aside .container
{
    display: flex;
    align-items: center;
    flex-direction: column;
    width: 100%;
    margin: 0;
    padding: 0;
    overflow: visible;
}

aside .container .arrow 
{
    z-index: 1;
    position: relative;
    width: 40px;
    height: 40px;
    display: flex;
    margin-top: -24px;
    border-radius: 5px;
    margin-bottom: 20px;
    align-items: center;
    justify-content: center;
    background-color: black;
    transform: rotate(-45deg);
}

aside .container .arrow i 
{
    color: white;
    font-size: 20px; 
    position: relative;
    animation: slideArrow 1s infinite;
}
@keyframes slideArrow {
    0% {
        transform: rotate(45deg) translateY(-100%);
        opacity: 0;
    }
    49% {
        transform: rotate(45deg) translateY(0);
        opacity: 1;
    }
    51% {
        transform: rotate(45deg) translateY(0);
        opacity: 1;
    }
    100% {
        transform: rotate(45deg) translateY(100%);
        opacity: 0;
    }
}

aside .container > h1
{
    font-size: 20px;
    font-weight: bolder;
    color: var(--main-color);
}

aside .container > h2
{
    margin: 10px 0 25px;
    font-size: 30px;
    color: white;
}

aside .container .plans
{
    width: 100%;
    display: flex;
    margin-top: 25px;
    justify-content: space-evenly;
}

/* aside .container .plans .card
{
    width: 210px;
} */

aside .container .plans .card div
{
    display: flex;
    overflow: hidden;  
    position: relative; 
    align-items: center;
    flex-direction: column;

    width: 300px;
    transform: skewY(-4deg);
    padding: 20px 10px 50px;
    background-color: black;
    border: 3px solid #ffffff;
    box-shadow: 0px 0px 5px 0px rgb(0 0 0 / 50%), inset -5px 5px 20px 0px rgb(0 0 0 / 30%);

    transition: all 0.5s;
}

aside .container .plans .card:hover div
{
    transform: translateY(-10px) skewY(-4deg); 
    box-shadow: -4px 4px 10px 0px rgba(0, 0, 0, 0.5), inset -5px 5px 20px 0px rgb(0 0 0 / 30%);
    transition: transform 0.25s ease-in-out , box-shadow 0.25s ease-in-out; 
}

aside .container .plans .card:nth-child(1) div:hover
{
    background-color: rgb(27, 124, 198);
}

.card:nth-child(1) div:hover::after,
.card:nth-child(2) div:hover::after,
.card:nth-child(3) div:hover::after
{
    z-index: -1;
    content: "";
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    opacity: 0.3;
    position: absolute;
    background-size: 100% 100%;
    background-repeat: no-repeat;
    background-image: var(--hover-img);
    transition: background-position 0.5s ease;
}

aside .container .plans .card:nth-child(2) div:hover
{
    background-color: rgb(138, 51, 196);
}

aside .container .plans .card:nth-child(3) div:hover
{
    background-color: rgb(180, 129, 28);
}

aside .container .plans .card div h1
{
    color: white;
    font-size: 25px;
    margin-top: 10px;
    font-weight: 900;
}   

aside .container .plans .card div article
{
    display: flex;
    align-items: center;
    margin-right: 65px;
    transform: rotate(0deg);
}

aside .container .plans .card div article h3
{
    font-size: 22px;
    margin: 20px 0px;
    color: var(--main-color);
}

aside .container .plans .card div article del
{
    /* visibility: hidden; */
    font-size: 16px;
    color: #b4b9c9;
    margin-right: 10px;
}

aside .container .plans .card div p
{
    color: white;
    font-size: 23px;
    font-weight: 700;
    margin: 0px 0px 35px;
}

aside .container .plans .card div a
{
    padding: 10px;
    font-size: 16px;
    font-weight: bolder;
    text-decoration: none;
    color: rgb(255, 255, 255);
    border: 3px solid rgb(255, 255, 255);

    transition: all 0.25s;
}

aside .container .plans .card .btn {
  position: relative;
  height: 43px;
  top: 12px;
}
aside .container .plans .card:hover .btn {
  width: 106px;
  display: flex;
  align-items: center;
  justify-content: center;
  top: 0;
  left: 0;
  transform: skewX(0deg);
}

aside .container .plans .card:hover .btn a {
  z-index: 10;
  position: absolute;
  color: #fff; 
  border-color: black;
  letter-spacing: 1px;
  text-decoration: none;
  backdrop-filter: blur(15px);
  background: rgba(255, 255, 255, 0.05);
  box-shadow: 0 15px 35px rgba(0, 0, 0, 0.2);

  transition: 0.5s;
}

/* aside .container .plans .card:hover .btn:hover a {
} */

aside .container .plans .card:hover .btn:before {
  content: "";
  position: absolute;
  left: 50%;
  transform: translateX(-50%) rotate(4deg);
  background: var(--main-color);
  bottom: 0px;
  width: 30px;
  height: 10px;
  border-radius: 10px;
  transition: 0.1s;
  transition-delay: 0s;
}

aside .container .plans .card:hover .btn:hover::before {
  bottom: 0px;
  height: 50%;
  width: 90%;
  border-radius: 30px;
  transition-delay: 0.3s;
}

aside .container .plans .card:hover .btn:after {
  content: "";
  position: absolute;
  left: 50%;
  transform: translateX(-50%) rotate(4deg);
  background: var(--main-color);
  top: 0px;
  width: 30px;
  height: 10px;
  border-radius: 10px;
  transition: 0.1s;
  transition-delay: 0s;
}

aside .container .plans .card:hover .btn:hover::after {
  top: 0px;
  height: 50%;
  width: 90%;
  border-radius: 30px;
  transition-delay: 0.3s;
}
/* ... */

